Update role to ADMIN and fix config